--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,5 @@
 
 body {
   font-family: "Open Sans Condensed", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  padding: 20px 60px;
 }
