--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,26 @@ html {
 body {
   font-family: "Open Sans Condensed", sans-serif;
   padding: 20px 60px;
+  overflow: overlay;
+  overflow-x: hidden;
 }
 
 a {
   text-decoration: none;
   color: #0c0c0c;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  opacity: 0.5;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #ccc;
 }
